<resources>
    <string name="app_name">Calculator App</string>
    <string name="_0">0</string>
    <string name="_c">C</string>
    <string name="_leftbracket">(</string>
    <string name="__rightbracket">)</string>
    <string name="_slash">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_star">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_minus">-</string>
    <string name="ac">AC</string>
    <string name="_dot">.</string>
    <string name="_equal">=</string>
    <string name="square_root">√</string>
    <string name="comma">,</string>
    <string name="pow">^</string>
    <string name="modulo">%</string>
    <string name="ln">ln</string>
    <string name="pi">π</string>
    <string name="abs">abs</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="e">e</string>
    <string name="rotate">rotate</string>
</resources>